[metadata]
name = obscraper
description = obscraper: basic API to the overcomingbias blog
long_description = file: README.rst
long_description_content_type = text/x-rst
# url = URL GOES HERE
author = Christopher McDonald
license = MIT
license_file = LICENSE
platforms = win32 # unix, linux, osx, cygwin, 
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
#    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
#    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
#    Programming Language :: Python :: 3.7
#    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
keywords = overcomingbias, api, bs4
# project_urls =
#     Changelog=
#     Source=GitHub site
#     Tracker=Issue tracker

[options]
packages = obscraper
install_requires = 
    bs4
    requests
    cachetools = >=4.2
    lxml = >=3
    python-dateutil = >=2.7
    pytz
python_requires = >=3.9
zip_safe = False

[options.entry_points]
console_scripts = 
    obscraper = obscraper.__main__:entrypoint